2018-09-07:
   - Define double() only if R version is < 3.6.0

2018-07-10:
   - Handle SPSS "Portable files" with weights and empty value labels

2017-12-20:
   - Explicitly allow installation with R versions from 3.3.0
   - Fixed warning about tautological comparisons shown by check with
     flavor 'r-devel-linux-x86_64-fedora-clang'.

2017-12-19:
   - Fix compilation problems with R version < 3.4

2017-12-11:
   - Made bracket subsetting of mtable results safer and more coherent.

2017-12-10:
   - Allow package to be installed and run with R versions < to 3.4

2017-12-01:
   - Set a more sensible default for optional argument "show.eqnames" and
     global option "mtable.show.eqnames".

2017-11-19:
   - Fixed obscure bug affecting import of spss system files under 32bit Windows.
     This bug was caused by excessive optimisation of for loops by the C compiler.

2017-11-05:
   - Made the display of left-hand sides of model equations optional in the
     output of `mtable()` by providing an optional argument "show.eqnames"
     and a global option "mtable.show.eqnames".

2017-10-31:
   - Fixed (internal) `readChunk` method for fixed-format files with SPSS meta data.

2017-10-21:
   - Implemented explicit option to control whether equation titles
     (or names of dept. variables) are printed from `mtable'.

2017-10-11:
   - Made 'toLatex.escape.tex' an explicit option for 'toLatex' methods
     provided by the package

2017-09-30:
   - Included 'read_sysfile_slice' in 'CallMethods'
   - Removed some potentially stale links from vignette 'mtable-html'

2017-09-08:
   - Empty cells in HTML tables (which break their formatting by 'pandoc' if included
     in markdown format files) are now avoided

2017-09-06:
   - Lines without contents from 'mtable()' results are now automatically dropped
   - Added support for additional statitics without standard errors in 'mtable()'
   - Improved mtable support for merMod objects (created by package "lme4")

2017-09-03: