@@ -1,8 +1,8 @@
 Package: memisc
 Type: Package
 Title: Management of Survey Data and Presentation of Analysis Results
-Version: 0.99.14.11
-Date: 2018-09-07
+Version: 0.99.14.12
+Date: 2018-09-30
 Author: Martin Elff (with contributions from Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, Achim Zeileis)
 Maintainer: Martin Elff <memisc@elff.eu>
 Description: An infrastructure for the management of survey data including
@@ -22,8 +22,7 @@ VignetteBuilder: knitr
 URL:
         http://www.elff.eu/software/memisc/,http://github.com/melff/memisc/
 BugReports: http://github.com/melff/memisc/issues
-RoxygenNote: 6.1.0
 NeedsCompilation: yes
-Packaged: 2018-09-07 11:43:35 UTC; elff
+Packaged: 2018-09-30 23:41:57 UTC; elff
 Repository: CRAN
-Date/Publication: 2018-09-08 15:29:40 UTC
+Date/Publication: 2018-10-01 19:50:02 UTC
