@@ -192,7 +192,7 @@ CONTROL' 'NEW DEAL' 'MARSHALL PLAN' 'FIRM RUSSIAN POLICY' 'HELP ISRAEL
 (PALESTINE)' 'PROMOTE PEACE'</code></pre>
 <pre class="r"><code>print(nes1948)</code></pre>
 <pre><code>
-SPSS portable file '/tmp/RtmpWYiwFR/file5b99168f984f/NES1948.POR' 
+SPSS portable file '/tmp/RtmpDaQ7Za/file731548013b73/NES1948.POR' 
     with 67 variables and 662 observations</code></pre>
 <p>At this stage, the data are not loaded into the memory yet. But we can see which variables exist inside the data set:</p>
 <pre class="r"><code>names(nes1948)</code></pre>
