@@ -1,5 +1,11 @@
+2018-09-30:
+   - Adapt 'spss.fixed.file' to data files with lines that are "too long".
+   - Export C-function 'readfixedslice'.
+
 2018-09-07:
    - Define double() only if R version is < 3.6.0
+   - Remove crossrefs to 'car' package to escape the depency hell created by
+     that package
 
 2018-07-10:
    - Handle SPSS "Portable files" with weights and empty value labels
